# estate_parser

./: .env  .env.backup  .gitignore  AUTOMATION_README.md  Dockerfile  Dockerfile.scheduler  LINK_VALIDATION_FIX.md  LINK_VALIDATION_SETTINGS.md  PARSING_ERRORS_DETECTION.md  QUICK_START_GUIDE.md  README.md  README_image_test.md  SYNTAX_FIXES.md  config.py  create_db_tables.py  debug_hashes.py  doc.md  docker-compose.yml  entrypoint-scrapy.sh  entrypoint.sh  env.example  image_deduplication_test.py  image_deduplication_test_separate.py  link_validation_results_20250731_175847.txt  link_validation_results_20250731_180515.txt  link_validation_results_20250731_191818.txt  link_validator_playwright.py  main.py  manage_tables.py  models.py  nginx.conf  process_photos.py  pyproject.toml  reindex_elasticsearch.py  requirements.txt  reset_duplicates.py  scheduler_service.py  steps.md  test_elasticsearch.py  test_link_validation.py  (+1 more)
app/: alembic.ini  database.py  db_models.py  duplicate_processor.py  main.py  models.py  web_routes.py
app/migrations/: env.py
app/services/: automation_service.py  duplicate_service.py  elasticsearch_service.py  photo_service.py  scrapy_manager.py
app/templates/: ads.html  automation.html  base.html  dashboard.html  logs.html
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
logs/: api_container_logs.txt
photo_validation_test/: README.md  TEST_RESULTS.md  install_dependencies.sh  photo_validator.py  requirements.txt
real_estate_scraper/: output.json  result_house.json  result_lalafo.json  result_stroka.json
scraper/: .dockerignore  Dockerfile  requirements.txt
scripts/: dev_setup.sh  migrate_to_new_structure.sh  quick_test.sh
tools/: analyze_db_state.py  create_admin.py  create_site_config.py  debug_deduplication.py  monitor_logs.py  reset_db_simple.py  start_test_scraping.py  test_ai_extraction_local.py  test_ai_pipeline_integration.py  test_deduplication_algorithm.py  test_deduplication_status.py  test_fix.py  test_fixes.py  test_fixes_simple.py  test_new_site.py  view_scraping_logs.py
(+421 files in other folders)
