[project]
name = "estate-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.9.0",
    "aiohttp>=3.12.13",
    "alembic>=1.16.2",
    "cachetools>=6.1.0",
    "celery>=5.3.0",
    "datasets>=4.0.0",
    "elasticsearch>=8.12.0",
    "elasticsearch-dsl>=8.12.0",
    "fastapi>=0.115.12",
    "gliner>=0.2.21",
    "huggingface-hub>=0.33.2",
    "imagehash>=4.3.2",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pathlib2>=2.3.7.post1",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scrapy>=2.13.2",
    "scrapy-fake-useragent>=1.4.4",
    "scrapy-playwright>=0.0.43",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-json>=0.7.0",
    "timm>=1.0.17",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
    "ultralytics>=8.3.168",
    "uvicorn>=0.34.3",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "real_estate_scraper*"]
